# vide-oh

./: README.md
client-app/vue/: package-lock.json  package.json  vue.config.js
client-app/vue/src/: App.vue  main.js
client-app/vue/src/components/: Messages.vue  Profile.vue  Register.vue  ReportedComments.vue  ReportedVideos.vue  SearchVideos.vue  SupportMessages.vue  UploadVideo.vue  VideoView.vue
client-app/vue/src/router/: index.js
client-app/vue/src/views/: AdministratorPage.vue  Login.vue  Logout.vue  RegisteredPage.vue  SupportPage.vue  (+1 more)
comment-service/: .env  Cargo.toml
comment-service/migrations/2022-08-21-192656_create_commends_and_ratings/: down.sql  up.sql
comment-service/src/: auth.rs  connection.rs  handler.rs  main.rs  models.rs  repository.rs  router.rs  schema.rs
nginx/: nginx.conf
support-service/: go.mod  go.sum  main.go
support-service/controllers/: messagecontroller.go
support-service/database/: client.go
support-service/middleware/: auth.go
support-service/models/: message.go
support-service/utils/: utils.go
user-service/: go.mod  go.sum  main.go
user-service/auth/: jwt.go
user-service/controllers/: tokencontroller.go  usercontroller.go
user-service/database/: client.go
user-service/middleware/: auth.go
user-service/models/: user.go
user-service/utils/: mail.go  utils.go
video-service/: go.mod  go.sum  main.go  test.html  upload-test.html
video-service/controllers/: videocontroller.go
video-service/database/: client.go
video-service/middleware/: auth.go
video-service/models/: video.go
