[package]
name = "comment-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
# dotenv = "0.15.0"
# diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
# rocket = { version = "0.5.0-rc.2", features = ["json"] }
# rocket_codegen = "0.5.0-rc.2"
# serde = "1.0.144"
# serde_derive = "1.0.116"
# serde_json = "1.0.83"
# r2d2-diesel = "1.0.0"
# r2d2 = "0.8.9"
# env_logger = "0.5.12"
# log = "0.4.6"
# chrono = "0.4"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }
jwt = "0.16.0"
reqwest = { version = "0.11.11", features = ["blocking"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]